--- a/recipe-sharing-platform/package.json
+++ b/recipe-sharing-platform/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "postcss": "^8.x.x",
+    "autoprefixer": "^10.x.x"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
